fixed documentation links

--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -23,19 +23,19 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 <CardGrid stagger>
 	<Card title="Visual Studio" icon="puzzle">
 		Design flows with a drag-and-drop canvas. Perfect for rapid prototyping and visual thinkers.
-		[Launch Studio →](/studio/)
+		[Launch Studio →](/astonish/studio/)
 	</Card>
 	<Card title="Command Line" icon="terminal">
 		Write YAML flows and run them from the terminal. Ideal for automation and power users.
-		[Explore CLI →](/cli/)
+		[Explore CLI →](/astonish/cli/)
 	</Card>
 	<Card title="Extend with Tools" icon="add-document">
 		Connect MCP servers, add repositories, and extend Astonish with powerful integrations.
-		[Add Tools →](/using-the-app/add-mcp-servers/)
+		[Add Tools →](/astonish/using-the-app/add-mcp-servers/)
 	</Card>
 	<Card title="Understand Concepts" icon="open-book">
 		Learn about flows, nodes, state management, and the YAML schema that powers everything.
-		[Key Concepts →](/concepts/flows/)
+		[Key Concepts →](/astonish/concepts/flows/)
 	</Card>
 </CardGrid>
 
